[Fix bug][SP] fix bug text link wrong position in iphone 7 (ticket 79732)

--- a/store/css/store-detail/store-information.css
+++ b/store/css/store-detail/store-information.css
@@ -40,7 +40,7 @@
 
 .information__link-wrapper {
      display: flex;
-     justify-content: right;
+     justify-content: flex-end;
 }
 
 .information__link {
